name: json-validation
version: 0.1.0.0
synopsis: JSON schema validation
description: Lightweight combinators for validating JSON
category: Data
homepage: https://github.com/mitchellwrosen/json-validation#readme
bug-reports: https://github.com/mitchellwrosen/json-validation/issues
maintainer: Mitchell Rosen
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >= 2.0
tested-with: GHC == 7.8.1, GHC == 7.8.2, GHC == 7.8.3, GHC == 7.8.4,
             GHC == 7.10.1, GHC == 7.10.2, GHC == 7.10.3,
             GHC == 8.0.1, GHC == 8.0.2,
             GHC == 8.2.1, GHC == 8.2.2,
             GHC == 8.4.1

source-repository head
  type: git
  location: https://github.com/mitchellwrosen/json-validation

library
  hs-source-dirs: src
  build-depends:
      aeson
    , base >= 4.7 && < 5
    , containers
    , hashable
    , iso8601-time
    , microlens ^>= 0.3 || ^>= 0.4
    , mtl
    , pcre-light
    , scientific
    , text
    , unordered-containers ^>= 0.2.6.0
    , vector ^>= 0.11 || ^>= 0.12
  if impl(ghc < 8.0.1)
    build-depends:
        semigroups
  exposed-modules:
      Data.Aeson.Validation
  other-modules:
      Data.Aeson.Validation.Internal
  default-language: Haskell2010

test-suite doctest
  type: exitcode-stdio-1.0
  main-is: DocTest.hs
  hs-source-dirs: test
  build-depends:
      aeson
    , base
    , containers
    , doctest ^>= 0.11 || ^>= 0.12 || ^>= 0.13 || ^>= 0.14 || ^>= 0.15 || ^>= 0.16
    , hashable
    , iso8601-time
    , json-validation
    , microlens
    , mtl
    , pcre-light
    , quickcheck-instances
    , scientific
    , text
    , unordered-containers
    , vector
  if impl(ghc < 8.0.1)
    build-depends:
        semigroups
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: src test
  build-depends:
      aeson
    , base
    , containers
    , hashable
    , hspec
    , iso8601-time
    , json-validation
    , microlens
    , mtl
    , pcre-light
    , QuickCheck ^>= 2.10 || ^>= 2.11
    , quickcheck-text
    , scientific
    , text
    , unordered-containers
    , vector
  if impl(ghc < 8.0.1)
    build-depends:
        semigroups
  other-modules:
      Data.Aeson.Validation
      Data.Aeson.Validation.Internal
  default-language: Haskell2010
